# pedigree-qa-assignment

./: .env  .gitignore  README.MD  pyproject.toml
data/: Dogs Pedigree.csv
data/manipulation/: README.md  mutate.py
data/manipulation/configs/: README.md  all-corrupted.json  ancestry-conflict.json  breed-mismatch.json  broken-parent-ref.json  duplicate-id.json  format-violation.json  invalid-measurements-range.json  self-parenting.json  sex-mismatch.json  single-parent.json
data/manipulation/scenarios/: all-corrupted.csv  ancestry-conflict.csv  breed-mismatch.csv  broken-parent-ref.csv  bu_all-corrupted.csv  duplicate-id.csv  format-violation.csv  invalid-measurements-range.csv  self-parenting.csv  sex-mismatch.csv  single-parent.csv
src/pages/: base_page.py  home_page.py  index.py
src/pedigree/api/: app.py  data.py  types.py
src/pedigree/web/: app.js  index.html  styles.css
src/services/: models.py  pedigree_service.py
tests/: conftest.py
tests/api/: test_ancestors_schema.py  test_dog_schema.py  test_pedigree_service.py
tests/data-integrity/: test_ancestry_conflict.py  test_breed_mismatch.py  test_broken_parent_ref.py  test_duplicate_id.py  test_format_violation.py  test_integration_all_validations.py  test_measurements.py  test_self_parenting.py  test_sex_mismatch.py  test_single_parent.py
tests/ui/: test_dog_selection.py  test_navigation.py  test_search.py  test_tree_interactions.py
utils/: api_manager.py  decorators.py  enums.py  exceptions.py  integrity.py
